Use AtomArrayLists for the child lists instead of AtomLists.  Drop use of AtomSequencerNbr and AtomSequencerCell